2007-05-03  Andrew Haley  <aph@redhat.com>
        * gnu/javax/management/Server.java (Server): Record the delegate.
        (registerMBean): Notify the delegate.
        (unregisterMBean): Likewise.
        (notify): New method.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/redhat@124384 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-4_1-branch/libjava/classpath/ChangeLog
+++ b/gcc-4_1-branch/libjava/classpath/ChangeLog
@@ -1,3 +1,10 @@
+2007-05-03  Andrew Haley  <aph@redhat.com>
+
+	* gnu/javax/management/Server.java (Server): Record the delegate.
+	(registerMBean): Notify the delegate.
+	(unregisterMBean): Likewise.
+	(notify): New method.
+
 2007-04-04  Francis Kung  <fkung@redhat.com>
 
 	* gnu/java/awt/peer/gtk/ComponentGraphics.java
