* gcc.target/mips/dpaq_sa_l_w.c: New test.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/fixed-point@124398 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-03  Chao-ying Fu  <fu@mips.com>
+
+	* gcc.target/mips/dpaq_sa_l_w.c: New test.
+
 2007-04-27  Ian Lance Taylor  <iant@google.com>
 
 	PR middle-end/31710
