* libsupc++/cxxabi.h (__cxa_atexit): Conditionalize exception 	specification on #ifdef __cplusplus.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@124456 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-04  Mark Mitchell  <mark@codesourcery.com>
+
+	* libsupc++/cxxabi.h (__cxa_atexit): Conditionalize exception
+	specification on #ifdef __cplusplus.
+	
 2007-05-04  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_memory.h: Rename to stl_auto_ptr.h.
@@ -20,6 +25,7 @@
 	* libsupc++/atexit_arm.cc: New file.
 	* libsupc++/vec.cc (__aeabi_atexit): Remove.
 	* libsupc++/cxxabi.h (__cxa_atexit): Add exception specification.
+
 	* libsupc++/Makefile.am: Add atexit_arm.cc.
 	* libsupc++/Makefile.in: Regenerated.
 
