2007-05-04  Paolo Carlini  <pcarlini@suse.de>
	* include/bits/stl_raw_storage_iter.h (class raw_storage_iterator):
	Adjust template parameter name.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@124459 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-04  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/stl_raw_storage_iter.h (class raw_storage_iterator):
+	Adjust template parameter name.
+
 2007-05-04  Mark Mitchell  <mark@codesourcery.com>
 
 	* libsupc++/cxxabi.h (__cxa_atexit): Conditionalize exception
