2007-05-06  Paolo Carlini  <pcarlini@suse.de>
	* config/locale/generic/c_locale.cc: Don't use __builtin_huge_val*
	when __*_HAS_INFINITY__ is false.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@124470 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-05-06  Paolo Carlini  <pcarlini@suse.de>
+
+	* config/locale/generic/c_locale.cc: Don't use __builtin_huge_val*
+	when __*_HAS_INFINITY__ is false.
+
 2007-05-04  Paolo Carlini  <pcarlini@suse.de>
 
 	* include/bits/stl_raw_storage_iter.h (class raw_storage_iterator):
