--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2007-05-06  Paolo Carlini  <pcarlini@suse.de>
 
+	PR libstdc++/31836
+	* testsuite/17_intro/headers/c++200x/all.cc: Protect inclusion
+	of C99 headers.
+	* testsuite/17_intro/headers/c++200x/all_multiple_inclusion.cc:
+	Likewise.
+
+2007-05-06  Paolo Carlini  <pcarlini@suse.de>
+
 	* config/locale/generic/c_locale.cc: Don't use __builtin_huge_val*
 	when __*_HAS_INFINITY__ is false.
 
