--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-07  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* config/os/mingw32/os_defines.h (NOMINMAX): Update comment.
+
 2007-05-07  Jason Merrill  <jason@redhat.com>
 
 	PR c++/28145
