* include/bits/ostream.tcc (operator<<(char*)): Add __s.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk/libstdc++-v3@124522 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2007-05-07  Jason Merrill  <jason@redhat.com>
 
+	* include/bits/ostream.tcc (operator<<(char*)): Add __s.
+
 	* config/abi/pre/gnu.ver: Fix symbol versions.
 	* config/abi/pre/gnu-versioned-namespace.ver: Likewise.
 
