--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-05-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/util/testsuite_abi.cc: Add CXXABI_1.3.2.
+
+	* libsupc++/cxxabi-internal.h (__foreign_exception::__pure): To
+	__pure_virtual.
+
 2007-05-07  Jason Merrill  <jason@redhat.com>
 
 	* include/bits/ostream.tcc (operator<<(char*)): Add __s.
