--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/26_numerics/headers/cmath/types_std_c++0x_neg.cc: New.
+
 2007-05-08  Jason Merrill  <jason@redhat.com>
 
 	* libsupc++/cxxabi-internal.h: Remove, to be replaced by...
